@@ -33,6 +33,7 @@ Bug fixes
  * Removed ARIA ``role="table"`` from TableBlock output (Thibaud Colas)
  * Set Cache-Control header to prevent page preview responses from being cached (Tomas Walch)
  * Accept unicode characters in slugs on the "copy page" form (François Poulain)
+ * Support IPv6 domain (Alex Gleason, Coen van der Kamp)
 
 
 Upgrade considerations
